--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-个人主页yong
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YH</title>
+</head>
+<body>
+    这是一个个人主页
+</body>
+</html>
